--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
